--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #e03b64;
+  background-color: #a46c7a;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -50,7 +50,7 @@ h1 {
 }
 
 p {
-  color: #e7edef;
+  color: #02161d;
   font-size: 2em;
 }
 
@@ -66,7 +66,7 @@ button {
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
-  color: #e03b64;
+  color: #122b37;
   font-weight: 500;
   font-family: inherit;
   background-color: #f4f6f9;
@@ -110,7 +110,6 @@ button:focus-visible {
 
 /* Special styles ONLY for Landing Page */
 body.landing-page-body {
-  background: linear-gradient(to right, #cf1a32, #f6f7f8bb);
   transition: background 0.5s ease-in-out;
   display: flex;
   justify-content: center;
@@ -145,3 +144,28 @@ body.landing-page-body .progress-bar {
     transform: translateX(100%);
   }
 }
+
+.ripple {
+  position: fixed;
+  width: 20px;
+  height: 20px;
+  background: radial-gradient(circle, rgba(80, 227, 194, 0.4) 0%, rgba(74, 144, 226, 0) 70%);
+  border-radius: 50%;
+  pointer-events: none;
+  transform: translate(-50%, -50%);
+  transition: opacity 1s, transform 1s;
+  mix-blend-mode: difference;
+  z-index: 9998;
+}
+
+.feather {
+  position: fixed;
+  width: 10px;
+  height: 10px;
+  background: rgba(255, 255, 255, 0.7);
+  border-radius: 50%;
+  pointer-events: none;
+  opacity: 0;
+  transition: transform 0.5s ease-out, opacity 0.5s ease-out;
+}
+
