change on landingpage

--- a/src/index.css
+++ b/src/index.css
@@ -82,7 +82,7 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #9d2929;
+    background-color: #000000;
   }
   a:hover {
     color: #747bff;
