--- a/src/index.css
+++ b/src/index.css
@@ -59,7 +59,7 @@ strong{
   padding: 0.1em ;
 }
 
-.linkbutton {
+.linkb {
   border-radius: 5px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -71,13 +71,7 @@ strong{
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
-  border-color: #881e1e;
-}
-button:focus,
-button:focus-visible {
-  outline: 8px auto -webkit-focus-ring-color;
-}
+
 
 @media (prefers-color-scheme: light) {
   :root {
@@ -154,7 +148,7 @@ pre {
 }
 
 /* Button styling (optional enhancement) */
-.linkbutton {
+.linkb {
   margin-top: 1rem;
   padding: 0.8rem 2rem;
   font-size: 1.1rem;
@@ -166,7 +160,7 @@ pre {
   transition: transform 0.3s ease;
 }
 
-.linkbutton:hover {
+.linkb:hover {
   transform: scale(1.05);
 }
 
@@ -188,9 +182,28 @@ pre {
 }
 
 .reow{
-  padding: 6px 20px;
-  background-color: #dce5ed;
-  color: #000000;
-  border-radius: 5px;
-  font-size: 15px;
+  background-color: #0000003f;
+  font-size: 26px;
+  padding: 6px 20px ;
+  border-radius: 30px;
+  border-color: #898d9172;
+  border-style: ridge;
+  position: absolute;
+  align-items: center;
+}
+
+.rio{
+  color: #bbbbbb;
+  font-size: 40px;
+}
+
+.rio span{
+  font-family: "Moon Dance", serif;
+}
+
+.arr{
+  position: absolute;
+  margin: 20px;
+  top: 30%;
+  left: 24% ;
 }
